[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/PauseScreen.gd" type="Script" id=1]

[node name="PauseScreen" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -20.0
margin_right = 34.5
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 144.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 38.0

[node name="Continue" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Continue"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_PauseScreen_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
